# solution-radek

./: README.md  pyproject.toml
.github/workflows/: pr-checks.yml  release.yml
solution_radek/: __init__.py
