[build-system]
requires      = ['poetry-core>=1.3']
build-backend = 'poetry.core.masonry.api'

[tool.metadata]
display_name  = 'radek'
package_name  = 'solution-radek'
lib_name      = 'solution_radek'

[tool.poetry]
name        = 'solution-radek'
version     = '0.1.0'
description = 'Lime CRM solution'
authors     = ['Author <author@lime.tech>']

[[tool.poetry.source]]
name = 'lime'
url  = 'https://pypi.lime.tech/simple/'

[tool.poetry.plugins.'lime_plugins']
'solution-radek' = 'solution_radek'

[tool.poetry.dependencies]
python = '^3.11'
lime-crm = {path = "../lime-crm", develop = true}
limepkg-filter-editor = '^1.0.5'
limepkg-status-flow = '^2.0.1'
addon-infotiles = '^4.9.2'
limepkg-gdpr = '^3.0.1'
limepkg-option-visualizer = '^2.1.0'
limepkg-demo-date-mover = '^1.1.1'
lime-webhooks = {path = "../lime-webhooks", develop = true}

[tool.poetry.group.dev.dependencies]
autopep8 = '>=1'
pytest = '>=6.2.3'
flake8 = '^3.7'
black = '^22.1.0'
isort = '^5.0.0'

[tool.lime]
[tool.lime.project]
project_version = '1.214.0'
project_type    = 'solution'
project_target  = 'cloud'
project_imagebaker_version = '2.48.0'
project_imagebaker_pythonversion = '3.11'
project_autoupdate = true
project_autoupdate_env = "production"
project_create_limecloud_release = false

[tool.pytest.ini_options]
minversion = '6.0'
norecursedirs = [
    'venv',
    '.venv',
    'build',
    'dist',
    '.plugins',
    'frontend',
    '.env',
    '.git',
    '.github',
    '.lime',
    '.vscode'
]
faulthandler_timeout = 300

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | frontend
  | poetry.lock
)/
'''


[tool.isort]
profile = "black"
multi_line_output = 3
